@@ -1,6 +1,7 @@
 # Offpunk History
 
 ## 1.2 - Unreleased
+- Limit width of --sync output
 - Fixed a crash when trying to save a folder
 
 ## 1.1 - March 18th 2022
